--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "date-fns": "^2.21.3",
+    "material-table": "^1.69.3",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "^5.2.0",
     "sass": "^1.32.12"
   },
   "devDependencies": {
     "@types/node": "^15.0.1",
     "@types/react": "^17.0.4",
+    "@types/react-router-dom": "^5.1.7",
     "typescript": "^4.2.4"
   }
 }
