--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "date-fns": "^2.21.3",
+    "filesize": "^6.3.0",
+    "lodash": "^4.17.21",
     "material-table": "^1.69.3",
-    "next": "10.2.0",
+    "next": "^10.2.3",
     "react": "17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.3.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "sass": "^1.32.12"
+    "sass": "^1.32.12",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^15.0.1",
