--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "date-fns": "^2.21.3",
     "filesize": "^6.3.0",
     "lodash": "^4.17.21",
